--- a/index.html
+++ b/index.html
@@ -2,30 +2,76 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>舊城國小蓮潭路跑使命必站轉轉樂</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: sans-serif; background: #fefae0; color: #4e342e; text-align: center; padding: 20px; }
-    #nameInput { padding: 10px; font-size: 16px; width: 200px; }
-    #spinButton { padding: 10px 20px; background: #5d4037; color: white; border: none; border-radius: 5px; font-size: 16px; }
+    body { font-family: sans-serif; background: #fefae0; color: #4e342e; text-align: center; margin: 0; }
+    canvas { width: 90vw; max-width: 500px; height: 90vw; max-height: 500px; margin-top: 20px; border-radius: 50%; border: 10px solid #8d6e63; background: radial-gradient(#fff8e1, #ffe0b2); }
+    #nameInput { padding: 10px; font-size: 16px; width: 200px; margin-top: 10px; }
+    #spinButton { padding: 10px 20px; margin-top: 10px; background: #5d4037; color: white; border: none; border-radius: 5px; font-size: 16px; }
+    #result { margin-top: 20px; font-size: 18px; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>舊城國小蓮潭路跑使命必站轉轉樂</h1>
-  <p>輸入姓名後點擊抽籤</p>
-  <input type="text" id="nameInput" placeholder="輸入姓名">
+  <h2>舊城國小蓮潭路跑使命必站轉轉樂</h2>
+  <input type="text" id="nameInput" placeholder="輸入姓名" />
+  <br />
   <button id="spinButton">開始抽籤</button>
-  <p id="result"></p>
+  <div id="result"></div>
+  <canvas id="wheel" width="500" height="500"></canvas>
   <audio id="chime" src="chime.mp3" preload="auto"></audio>
   <script>
+    const canvas = document.getElementById("wheel");
+    const ctx = canvas.getContext("2d");
+    const result = document.getElementById("result");
     const chime = document.getElementById("chime");
+    const names = ["勝利路公廁", "勝利路施工處", "通天柱", "蓮潭運動中心", "清水師爺前", "涼亭", "截流站", "哈囉市場"];
+    const total = names.length;
+    const anglePer = (2 * Math.PI) / total;
+    let rotating = false;
+
+    function drawWheel() {
+      const r = canvas.width / 2;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let i = 0; i < total; i++) {
+        const start = i * anglePer;
+        const end = start + anglePer;
+        ctx.beginPath();
+        ctx.fillStyle = i % 2 === 0 ? "#ffcc80" : "#ffe0b2";
+        ctx.moveTo(r, r);
+        ctx.arc(r, r, r - 10, start, end);
+        ctx.fill();
+        ctx.save();
+        ctx.translate(r, r);
+        ctx.rotate(start + anglePer / 2);
+        ctx.textAlign = "right";
+        ctx.fillStyle = "#4e342e";
+        ctx.font = "16px sans-serif";
+        ctx.fillText(names[i], r - 30, 5);
+        ctx.restore();
+      }
+    }
+
+    drawWheel();
+
     document.getElementById("spinButton").onclick = () => {
       const name = document.getElementById("nameInput").value.trim();
-      if (!name) return alert("請先輸入姓名！");
-      document.getElementById("result").innerText = `${name} 抽中一個任務站位！`;
-      chime.currentTime = 0;
-      chime.play().catch(e => console.log("音效播放失敗：", e));
+      if (!name || rotating) return;
+      rotating = true;
+      const selected = Math.floor(Math.random() * total);
+      const rotation = 360 * 5 + (360 / total) * selected + (360 / total) / 2;
+      canvas.style.transition = "transform 4s ease-out";
+      canvas.style.transform = `rotate(-${rotation}deg)`;
+      setTimeout(() => {
+        result.innerText = `${name} 抽中：「${names[selected]}」`;
+        chime.currentTime = 0;
+        chime.play().catch(() => {});
+        rotating = false;
+        canvas.style.transition = "none";
+        canvas.style.transform = "rotate(0deg)";
+        drawWheel();
+      }, 4100);
     };
   </script>
 </body>
