--- a/index.html
+++ b/index.html
@@ -2,77 +2,105 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>舊城國小蓮潭路跑使命必站轉轉樂</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: sans-serif; background: #fefae0; color: #4e342e; text-align: center; margin: 0; }
-    canvas { width: 90vw; max-width: 500px; height: 90vw; max-height: 500px; margin-top: 20px; border-radius: 50%; border: 10px solid #8d6e63; background: radial-gradient(#fff8e1, #ffe0b2); }
-    #nameInput { padding: 10px; font-size: 16px; width: 200px; margin-top: 10px; }
-    #spinButton { padding: 10px 20px; margin-top: 10px; background: #5d4037; color: white; border: none; border-radius: 5px; font-size: 16px; }
-    #result { margin-top: 20px; font-size: 18px; font-weight: bold; }
+    html, body { margin:0; padding:0; font-family: "Segoe UI", sans-serif; background:#fefae0; color:#4e342e; text-align:center; }
+    header { padding:20px 10px 10px; }
+    .title { font-size:22px; font-weight:bold; }
+    .subtitle { font-size:18px; margin-top:5px; }
+    .input-area { margin:15px; display:flex; justify-content:center; gap:10px; flex-wrap:wrap; }
+    #nameInput { padding:10px; font-size:16px; width:200px; border-radius:5px; border:1px solid #aaa; }
+    #spinButton {
+      padding:10px 20px; font-size:16px; background-color:#5d4037; color:white; border:none; border-radius:5px; cursor:pointer;
+    }
+    #wheel-container { margin:20px auto; width:500px; height:500px; position:relative; }
+    canvas#wheel {
+      width:100%; height:100%; border-radius:50%; border:10px solid #8d6e63;
+      background: radial-gradient(#fff8e1, #ffe0b2); box-shadow: 0 0 8px rgba(0,0,0,0.3);
+      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
+    }
+    #result { margin-top:20px; font-size:16px; }
+    #history {
+      margin:20px auto; width:90%; max-width:400px; background:#fffde7;
+      border:1px solid #d7ccc8; border-radius:8px; padding:10px; text-align:left;
+    }
   </style>
 </head>
 <body>
-  <h2>舊城國小蓮潭路跑使命必站轉轉樂</h2>
-  <input type="text" id="nameInput" placeholder="輸入姓名" />
-  <br />
-  <button id="spinButton">開始抽籤</button>
+  <header>
+    <div class="title">舊城國小蓮潭路跑使命必站轉轉樂</div>
+    <div class="subtitle">看看轉到哪個幸運站！</div>
+  </header>
+  <div class="input-area">
+    <input type="text" id="nameInput" placeholder="輸入姓名">
+    <button id="spinButton">開始抽籤</button>
+  </div>
+  <div id="wheel-container">
+    <canvas id="wheel" width="500" height="500"></canvas>
+  </div>
   <div id="result"></div>
-  <canvas id="wheel" width="500" height="500"></canvas>
+  <div id="history"></div>
   <audio id="chime" src="chime.mp3" preload="auto"></audio>
   <script>
-    const canvas = document.getElementById("wheel");
-    const ctx = canvas.getContext("2d");
-    const result = document.getElementById("result");
+    const stations = [
+      { id: 1, name: "勝利路公廁" }, { id: 2, name: "勝利路工程施工旁" }, { id: 3, name: "勝利路施工處" },
+      { id: 4, name: "勝利路餐廳前" }, { id: 5, name: "空白" }, { id: 6, name: "通天柱" },
+      { id: 7, name: "蓮潭運動中心" }, { id: 8, name: "蓮潭運動中心旁公廁" }, { id: 9, name: "清水師爺前方" },
+      { id: 10, name: "涼亭前" }, { id: 11, name: "截流站" }, { id: 12, name: "哈囉市場（自在蔬食對面）" }
+    ];
+    const icons = ["★", "✿", "✔", "✦", "✧", "❤", "❖", "⬤", "⬟", "▲", "☘", "★"];
+    let drawnIds = [], drawnIcons = {}, rotation = 0, spinning = false;
+    const canvas = document.getElementById("wheel"), ctx = canvas.getContext("2d");
+    const result = document.getElementById("result"), history = document.getElementById("history");
     const chime = document.getElementById("chime");
-    const names = ["勝利路公廁", "勝利路施工處", "通天柱", "蓮潭運動中心", "清水師爺前", "涼亭", "截流站", "哈囉市場"];
-    const total = names.length;
-    const anglePer = (2 * Math.PI) / total;
-    let rotating = false;
 
     function drawWheel() {
-      const r = canvas.width / 2;
+      const angle = 2 * Math.PI / stations.length, center = 250, radius = 230;
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      for (let i = 0; i < total; i++) {
-        const start = i * anglePer;
-        const end = start + anglePer;
-        ctx.beginPath();
-        ctx.fillStyle = i % 2 === 0 ? "#ffcc80" : "#ffe0b2";
-        ctx.moveTo(r, r);
-        ctx.arc(r, r, r - 10, start, end);
-        ctx.fill();
-        ctx.save();
-        ctx.translate(r, r);
-        ctx.rotate(start + anglePer / 2);
-        ctx.textAlign = "right";
-        ctx.fillStyle = "#4e342e";
-        ctx.font = "16px sans-serif";
-        ctx.fillText(names[i], r - 30, 5);
-        ctx.restore();
-      }
+      stations.forEach((s, i) => {
+        const start = i * angle, end = start + angle;
+        ctx.fillStyle = ["#ffe0b2", "#ffcc80", "#ffb74d"][i % 3];
+        ctx.beginPath(); ctx.moveTo(center, center);
+        ctx.arc(center, center, radius, start, end); ctx.lineTo(center, center); ctx.fill();
+        ctx.save(); ctx.translate(center, center); ctx.rotate(start + angle / 2);
+        ctx.textAlign = "center"; ctx.textBaseline = "middle";
+        ctx.fillStyle = "#4e342e"; ctx.font = "14px sans-serif";
+        ctx.fillText(`${s.id}. ${s.name}`, radius - 50, 0);
+        if (drawnIcons[s.id]) {
+          ctx.fillStyle = "#d32f2f"; ctx.font = "20px serif";
+          ctx.fillText(drawnIcons[s.id], radius - 20, -20);
+        } ctx.restore();
+      });
     }
 
-    drawWheel();
-
-    document.getElementById("spinButton").onclick = () => {
+    function spinWheel() {
+      if (spinning) return;
       const name = document.getElementById("nameInput").value.trim();
-      if (!name || rotating) return;
-      rotating = true;
-      const selected = Math.floor(Math.random() * total);
-      const rotation = 360 * 5 + (360 / total) * selected + (360 / total) / 2;
-      canvas.style.transition = "transform 4s ease-out";
-      canvas.style.transform = `rotate(-${rotation}deg)`;
+      if (!name) return alert("請輸入姓名！");
+      const remaining = stations.filter(s => !drawnIds.includes(s.id));
+      if (remaining.length === 0) return alert("所有站位已抽完！");
+      spinning = true;
+      const selected = remaining[Math.floor(Math.random() * remaining.length)];
+      const index = stations.findIndex(s => s.id === selected.id);
+      const anglePerItem = 360 / stations.length;
+      const stopAngle = 360 * 5 - (index * anglePerItem + anglePerItem / 2);
+      rotation += stopAngle; canvas.style.transform = `rotate(${rotation}deg)`;
+
       setTimeout(() => {
-        result.innerText = `${name} 抽中：「${names[selected]}」`;
-        chime.currentTime = 0;
-        chime.play().catch(() => {});
-        rotating = false;
-        canvas.style.transition = "none";
-        canvas.style.transform = "rotate(0deg)";
+        const icon = icons[drawnIds.length % icons.length];
+        drawnIds.push(selected.id); drawnIcons[selected.id] = icon;
+        history.innerHTML += `<div>${name}：${selected.id}. ${selected.name}</div>`;
+        result.innerHTML = `<strong>${name}</strong> 抽中了 <strong>${selected.id}. ${selected.name}</strong>`;
+        chime.currentTime = 0; chime.play().catch(() => {});
         drawWheel();
-      }, 4100);
-    };
+        spinning = false;
+      }, 5200);
+    }
+
+    document.getElementById("spinButton").onclick = spinWheel;
+    drawWheel();
   </script>
 </body>
 </html>
