--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <title>舊城國小蓮潭路跑使命必站轉轉樂</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    html, body { margin:0; padding:0; font-family: "Segoe UI", sans-serif; background:#fefae0; color:#4e342e; text-align:center; }
+    
+html, body {
+  margin:0; padding:0; font-family: "Segoe UI", sans-serif;
+  background: url('lotuspond-bg.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color:#4e342e; text-align:center;
+}
+
     header { padding:20px 10px 10px; }
     .title { font-size:22px; font-weight:bold; }
     .subtitle { font-size:18px; margin-top:5px; }
