--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <div id="wheel-container"><canvas id="wheel" width="500" height="500"></canvas></div>
   <div id="result"></div>
   <div id="history"></div>
+  <audio id="chime" src="chime.mp3" preload="auto"></audio>
   <canvas id="confetti-canvas"></canvas>
   <audio id="chime" src="chime.mp3" preload="auto"></audio>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -100,9 +101,13 @@
         }
         result.innerHTML = `<strong>${name}</strong> 抽中了 <strong>${selected.id}. ${selected.name}</strong>`;
         chime.currentTime = 0; chime.play().catch(()=>{});
+        chime.currentTime = 0;
+        chime.play().catch(()=>{});
         drawWheel();
         startConfetti();
-        setTimeout(() => { highlight = []; drawWheel(); }, 2000);
+        setTimeout(() => { highlight = []; chime.currentTime = 0;
+        chime.play().catch(()=>{});
+        drawWheel(); }, 2000);
         spinning = false;
       }, 5200);
     }
@@ -118,7 +123,9 @@
     }
 
     document.getElementById("spinButton").onclick = spinWheel;
-    drawWheel();
+    chime.currentTime = 0;
+        chime.play().catch(()=>{});
+        drawWheel();
   </script>
 </body>
 </html>
