--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         drawWheel();
 
 let hasPlayedVoice = false;
-document.getElementById("nameInput").addEventListener("input", () => {
+document.getElementById("nameInput").addEventListener("focus", () => {
   if (!hasPlayedVoice && chime) {
     chime.pause();
     chime.currentTime = 0;
@@ -134,7 +134,7 @@ document.getElementById("nameInput").addEventListener("input", () => {
         drawWheel();
 
 let hasPlayedVoice = false;
-document.getElementById("nameInput").addEventListener("input", () => {
+document.getElementById("nameInput").addEventListener("focus", () => {
   if (!hasPlayedVoice && chime) {
     chime.pause();
     chime.currentTime = 0;
@@ -172,7 +172,7 @@ document.getElementById("nameInput").addEventListener("input", () => {
         drawWheel();
 
 let hasPlayedVoice = false;
-document.getElementById("nameInput").addEventListener("input", () => {
+document.getElementById("nameInput").addEventListener("focus", () => {
   if (!hasPlayedVoice && chime) {
     chime.pause();
     chime.currentTime = 0;
