--- a/index.html
+++ b/index.html
@@ -262,5 +262,20 @@ document.getElementById("nameInput").addEventListener("focus", () => {
 <audio id="bgm" src="chime.mp3" loop preload="auto"></audio>
 <button onclick="toggleBGM()" style="position: fixed; bottom: 20px; right: 20px; z-index:1000;">播放/暫停音樂</button>
 
+
+<button onclick="toggleBGM()" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  font-size: 20px;
+  cursor: pointer;
+">♪</button>
+
 </body>
 </html>
