--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
-  background-image: url('lotus_background.png');
+  background-image: url('bg.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed; margin:0; padding:0; font-family: "Segoe UI", sans-serif; background:#fefae0; color:#4e342e; text-align:center; }
@@ -264,7 +264,7 @@ document.getElementById("nameInput").addEventListener("focus", () => {
   </script>
 
 
-<button onclick="toggleBGM()" style="position: fixed; bottom: 20px; right: 20px; z-index:1000;">播放/暫停音樂</button>
+
 
 
 
