--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 }
 
 
+
+body {
+  background-image: url('lotus_runner_bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 </style>
 
 
