--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 body {
-  background-image: url('lotus_runner_bg.jpg');
+  background-image: url('dragon_runner_bg.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
