--- a/index.html
+++ b/index.html
@@ -28,15 +28,7 @@
       border:1px solid #d7ccc8; border-radius:8px; padding:10px; text-align:left;
     }
   
-#confetti-canvas {
-  position: fixed;
-  pointer-events: none;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-}
+
 
 
 
@@ -45,6 +37,17 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+}
+
+
+#confetti-canvas {
+  position: fixed;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
 }
 
 </style>
@@ -106,9 +109,7 @@ body {
 
     
     
-function startConfetti() {
-  const duration = 2000, end = Date.now() + duration;
-  const confettiInstance = confetti.create(document.getElementById('confetti-canvas'), { resize: true });
+);
   (function frame() {
     confettiInstance({ particleCount: 7, angle: 60, spread: 55, origin: { x: 0 } });
     confettiInstance({ particleCount: 7, angle: 120, spread: 55, origin: { x: 1 } });
@@ -146,8 +147,8 @@ function spinWheel() {
         const msg = new SpeechSynthesisUtterance(text);
         msg.lang = 'zh-TW';
         setTimeout(() => speechSynthesis.speak(msg), 100);
-        drawWheel(); startConfetti(); 
-        setTimeout(() => { highlightIds = []; drawWheel(); startConfetti(); }, 2000);
+        drawWheel(); startConfetti();  
+        setTimeout(() => { highlightIds = []; drawWheel(); startConfetti();  }, 2000);
         spinning = false;
       }, 5200);
     }
@@ -158,14 +159,14 @@ function spinWheel() {
         drawnIds = []; drawnIcons = {}; highlightIds = [];
         availableIcons = [...icons]; rotation = 0;
         canvas.style.transform = "rotate(0deg)";
-        result.innerHTML = ""; history.innerHTML = ""; drawWheel(); startConfetti();
+        result.innerHTML = ""; history.innerHTML = ""; drawWheel(); startConfetti(); 
       }
     };
 
-    drawWheel(); startConfetti();
+    drawWheel(); startConfetti(); 
   </script>
 
-<canvas id="confetti-canvas"></canvas>
+
 
 <script>
 const confetti = (() => {
@@ -207,6 +208,51 @@ const confetti = (() => {
   }
   return () => loop();
 })();
+</script>
+
+<canvas id="confetti-canvas"></canvas>
+
+<script>
+function startConfetti() {
+  const duration = 2000;
+  const end = Date.now() + duration;
+  const canvas = document.getElementById("confetti-canvas");
+  const ctx = canvas.getContext("2d");
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  const colors = ["#bb0000", "#ffffff", "#00bb00", "#0000bb", "#ffbb00"];
+  const particles = Array.from({ length: 150 }, () => ({
+    x: Math.random() * canvas.width,
+    y: Math.random() * canvas.height - canvas.height,
+    r: Math.random() * 6 + 4,
+    color: colors[Math.floor(Math.random() * colors.length)],
+    d: Math.random() * 30 + 10
+  }));
+
+  function draw() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    particles.forEach(p => {
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+      ctx.fillStyle = p.color;
+      ctx.fill();
+    });
+    update();
+  }
+
+  function update() {
+    particles.forEach(p => {
+      p.y += p.d / 10;
+      if (p.y > canvas.height) p.y = -10;
+    });
+  }
+
+  (function loop() {
+    draw();
+    if (Date.now() < end) requestAnimationFrame(loop);
+  })();
+}
 </script>
 
 </body>
