--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@ body {
   z-index: 999;
 }
 
+
+#wheel-canvas {
+  width: 90vw;
+  max-width: 420px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 </style>
 
 
