--- a/index.html
+++ b/index.html
@@ -49,7 +49,23 @@
       height: 100%;
       z-index: 999;
     }
-  </style>
+  
+#result {
+  position: fixed;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(255,255,255,0.95);
+  color: #3e2723;
+  padding: 20px 30px;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: bold;
+  z-index: 1000;
+  display: none;
+}
+
+</style>
 </head>
 <body>
   <h1>舊城國小蓮潭路跑使命必站轉轉樂</h1>
@@ -57,6 +73,7 @@
   <button onclick="spinWheel()">開始抽籤</button>
   <canvas id="wheel-canvas"></canvas>
   <canvas id="confetti-canvas"></canvas>
+<div id="result"></div>
 
   <script>
     const stations = [
@@ -120,7 +137,7 @@
     function spinWheel() {
       const name = document.getElementById("name-input").value.trim();
       if (!name) {
-        alert("請輸入姓名！");
+        
         return;
       }
 
@@ -152,7 +169,13 @@
           requestAnimationFrame(animate);
         } else {
           startConfetti();
-          alert(`${name} 抽中站位：${stations[targetIndex].id} ${stations[targetIndex].name}`);
+
+const resultBox = document.getElementById("result");
+resultBox.innerText = `${name} 抽中站位：${stations[targetIndex].id} ${stations[targetIndex].name}`;
+resultBox.style.display = "block";
+setTimeout(() => { resultBox.style.display = "none"; }, 4000);
+
+          
         }
       }
 
