--- a/index.html
+++ b/index.html
@@ -1,61 +1,82 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>舊城國小蓮潭路跑使命必站轉轉樂</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#5d4037" />
   <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background-image: url('dragon_runner_bg.jpg');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-      text-align: center;
+    html, body { margin:0; padding:0; font-family: "Segoe UI", sans-serif; background:#fefae0; color:#4e342e; text-align:center; }
+    header { padding:20px 10px 10px; }
+    .title { font-size:22px; font-weight:bold; }
+    .subtitle { font-size:18px; margin-top:5px; }
+    .input-area { margin:15px; display:flex; justify-content:center; gap:10px; flex-wrap:wrap; }
+    #nameInput { padding:10px; font-size:16px; width:200px; border-radius:5px; border:1px solid #aaa; }
+    #spinButton, #resetButton {
+      padding:10px 20px; font-size:16px; background-color:#5d4037; color:white; border:none; border-radius:5px; cursor:pointer;
     }
-    h1 {
-      margin-top: 20px;
-      font-size: 24px;
-      color: #3e2723;
+    #resetButton { background-color:#a1887f; margin-top:10px; }
+    #wheel-container { margin:20px auto; width:500px; height:500px; position:relative; }
+    canvas#wheel {
+      width:100%; height:100%; border-radius:50%; border:10px solid #8d6e63;
+      background: radial-gradient(#fff8e1, #ffe0b2); box-shadow: 0 0 8px rgba(0,0,0,0.3);
+      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
     }
-    #wheel-canvas {
-      width: 90vw;
-      max-width: 420px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-    }
-    #name-input {
-      font-size: 18px;
-      padding: 6px;
-      margin: 10px;
-    }
-    button {
-      font-size: 18px;
-      padding: 10px 20px;
-      background-color: #8bc34a;
-      border: none;
-      border-radius: 8px;
-      color: white;
-    }
-    #confetti-canvas {
-      position: fixed;
-      pointer-events: none;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 999;
+    #result { margin-top:20px; font-size:16px; }
+    #history {
+      margin:20px auto; width:90%; max-width:400px; background:#fffde7;
+      border:1px solid #d7ccc8; border-radius:8px; padding:10px; text-align:left;
     }
   
+#confetti-canvas {
+  position: fixed;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-image: url('dragon_runner_bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  text-align: center;
+  background-color: #f5f5dc; /* 米色背景 */
+}
+
+h1 {
+  margin-top: 20px;
+  font-size: 24px;
+  color: #3e2723; /* 咖啡色文字 */
+}
+
+#name-input {
+  font-size: 18px;
+  padding: 6px;
+  margin: 10px;
+  background-color: #d7ccc8; /* 淺咖啡色背景 */
+}
+
+button {
+  font-size: 18px;
+  padding: 10px 20px;
+  background-color: #8bc34a;
+  border: none;
+  border-radius: 8px;
+  color: white;
+}
+
 #result {
   position: fixed;
   bottom: 20%;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(255,255,255,0.95);
+  background: rgba(255, 255, 255, 0.95);
   color: #3e2723;
   padding: 20px 30px;
   border-radius: 12px;
@@ -66,165 +87,117 @@
 }
 
 </style>
-</head>
-<body>
-  <h1>舊城國小蓮潭路跑使命必站轉轉樂</h1>
-  <input type="text" id="name-input" placeholder="輸入姓名" />
-  <button onclick="spinWheel()">開始抽籤</button>
-  <canvas id="wheel-canvas"></canvas>
-  <canvas id="confetti-canvas"></canvas>
-<div id="result"></div>
 
+</head>
+<body onclick='speechSynthesis.cancel()'>
+  <header>
+    <div class="title">舊城國小蓮潭路跑使命必站轉轉樂</div>
+    <div class="subtitle">看看轉到哪個幸運站！</div>
+  </header>
+  <div class="input-area">
+    <input type="text" id="nameInput" placeholder="輸入姓名" />
+    <button id="spinButton">開始抽籤</button>
+  </div>
+  <div id="wheel-container">
+    <canvas id="wheel" width="500" height="500"></canvas>
+  </div>
+  <div id="result"></div>
+  <div id="history"></div>
+  <button id="resetButton">重置抽籤</button>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
     const stations = [
-      { id: 1, name: "勝利路公廁" },
-      { id: 2, name: "勝利路工程施工旁" },
-      { id: 3, name: "勝利路施工處" },
-      { id: 4, name: "勝利路餐廳前" },
-      { id: 5, name: "空白" },
-      { id: 6, name: "通天柱" },
-      { id: 7, name: "蓮潭運動中心" },
-      { id: 8, name: "蓮潭運動中心旁公廁" },
-      { id: 9, name: "清水師爺前方" },
-      { id: 10, name: "涼亭前" },
-      { id: 11, name: "截流站" },
-      { id: 12, name: "哈囉市場（自在蔬食對面）" },
-      { id: 13, name: "孔廟後面（近哈囉市場）" },
-      { id: 14, name: "孔廟前路口" },
-      { id: 15, name: "天府宮停車場" },
-      { id: 16, name: "元帝廟停車場右邊出入口" },
+      { id: 1, name: "勝利路公廁" }, { id: 2, name: "勝利路工程施工旁" }, { id: 3, name: "勝利路施工處" },
+      { id: 4, name: "勝利路餐廳前" }, { id: 5, name: "空白" }, { id: 6, name: "通天柱" },
+      { id: 7, name: "蓮潭運動中心" }, { id: 8, name: "蓮潭運動中心旁公廁" }, { id: 9, name: "清水師爺前方" },
+      { id: 10, name: "涼亭前" }, { id: 11, name: "截流站" }, { id: 12, name: "哈囉市場（自在蔬食對面）" },
+      { id: 13, name: "孔廟後面（近哈囉市場）" }, { id: 14, name: "孔廟前路口" },
+      { id: 15, name: "天府宮停車場" }, { id: 16, name: "元帝廟停車場右邊出入口" },
       { id: 17, name: "元帝廟停車場左邊出入口" }
     ];
-
-    const canvas = document.getElementById("wheel-canvas");
-    const ctx = canvas.getContext("2d");
+    const pairedStations = { 1:13, 2:14, 3:15, 4:16, 5:17, 13:1, 14:2, 15:3, 16:4, 17:5 };
+    const icons = ["★", "✿", "✔", "✦", "✧", "❤", "❖", "⬤", "⬟", "▲"];
+    let availableIcons = [...icons];
+    let drawnIds = [], drawnIcons = {}, rotation = 0, spinning = false, highlightIds = [];
+    const canvas = document.getElementById("wheel"), ctx = canvas.getContext("2d");
+    const result = document.getElementById("result"), history = document.getElementById("history");
 
     function drawWheel() {
-      const rect = canvas.getBoundingClientRect();
-      canvas.width = rect.width * window.devicePixelRatio;
-      canvas.height = rect.width * window.devicePixelRatio;
-      ctx.setTransform(1, 0, 0, 1, 0, 0);
-      ctx.scale(window.devicePixelRatio, window.devicePixelRatio);
-
-      const cx = canvas.width / (2 * window.devicePixelRatio);
-      const cy = canvas.height / (2 * window.devicePixelRatio);
-      const radius = Math.min(cx, cy) - 10;
-      const angle = (2 * Math.PI) / stations.length;
-
+      const angle = 2 * Math.PI / stations.length, center = 250, radius = 230;
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      stations.forEach((station, i) => {
-        const start = angle * i;
-        const end = angle * (i + 1);
-        ctx.beginPath();
-        ctx.moveTo(cx, cy);
-        ctx.arc(cx, cy, radius, start, end);
-        ctx.fillStyle = i % 2 === 0 ? "#fff176" : "#aed581";
-        ctx.fill();
-        ctx.stroke();
-
-        ctx.save();
-        ctx.translate(cx, cy);
-        ctx.rotate(start + angle / 2);
-        ctx.textAlign = "right";
-        ctx.fillStyle = "#3e2723";
-        ctx.font = "16px sans-serif";
-        ctx.fillText(`${station.id} ${station.name}`, radius - 10, 5);
-        ctx.restore();
+      stations.forEach((s, i) => {
+        const start = i * angle, end = start + angle;
+        ctx.fillStyle = highlightIds.includes(s.id) ? "#ce93d8" : ["#ffe0b2", "#ffcc80", "#ffb74d"][i % 3];
+        ctx.beginPath(); ctx.moveTo(center, center);
+        ctx.arc(center, center, radius, start, end); ctx.lineTo(center, center); ctx.fill();
+        ctx.save(); ctx.translate(center, center); ctx.rotate(start + angle / 2);
+        ctx.textAlign = "center"; ctx.textBaseline = "middle";
+        ctx.fillStyle = "#4e342e"; ctx.font = "14px sans-serif";
+        ctx.fillText(`${s.id}. ${s.name}`, radius - 50, 0);
+        if (drawnIcons[s.id]) {
+          ctx.fillStyle = "#d32f2f"; ctx.font = "20px serif";
+          ctx.fillText(drawnIcons[s.id], radius - 20, -20);
+        } ctx.restore();
       });
     }
 
-    function spinWheel() {
-      const name = document.getElementById("name-input").value.trim();
-      if (!name) {
-        
-        return;
-      }
-
-      let rotation = 0;
-      let targetIndex = Math.floor(Math.random() * stations.length);
-      const angle = (2 * Math.PI) / stations.length;
-      const targetAngle = angle * targetIndex + angle / 2;
-
-      let spins = 6; // 完整旋轉圈數
-      let totalRotation = spins * 2 * Math.PI + targetAngle;
-
-      const duration = 3000;
-      const start = performance.now();
-
-      function animate(now) {
-        const elapsed = now - start;
-        const t = Math.min(elapsed / duration, 1);
-        const ease = 1 - Math.pow(1 - t, 3); // easeOutCubic
-
-        rotation = totalRotation * ease;
-        ctx.setTransform(1, 0, 0, 1, 0, 0);
-        ctx.translate(canvas.width / 2, canvas.height / 2);
-        ctx.rotate(rotation);
-        ctx.translate(-canvas.width / 2, -canvas.height / 2);
-
-        drawWheel();
-
-        if (t < 1) {
-          requestAnimationFrame(animate);
-        } else {
-          startConfetti();
-
-const resultBox = document.getElementById("result");
-resultBox.innerText = `${name} 抽中站位：${stations[targetIndex].id} ${stations[targetIndex].name}`;
-resultBox.style.display = "block";
-setTimeout(() => { resultBox.style.display = "none"; }, 4000);
-
-          
-        }
-      }
-
-      requestAnimationFrame(animate);
-    }
-
     function startConfetti() {
-      const canvas = document.getElementById("confetti-canvas");
-      const ctx = canvas.getContext("2d");
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-
-      const colors = ["#ff0000", "#00cc00", "#0000ff", "#ffcc00", "#ff00cc"];
-      const particles = Array.from({ length: 150 }, () => ({
-        x: Math.random() * canvas.width,
-        y: Math.random() * -canvas.height,
-        r: Math.random() * 6 + 4,
-        color: colors[Math.floor(Math.random() * colors.length)],
-        d: Math.random() * 30 + 10
-      }));
-
-      function draw() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        particles.forEach(p => {
-          ctx.beginPath();
-          ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
-          ctx.fillStyle = p.color;
-          ctx.fill();
-        });
-        update();
-      }
-
-      function update() {
-        particles.forEach(p => {
-          p.y += p.d / 10;
-          if (p.y > canvas.height) p.y = -10;
-        });
-      }
-
-      const duration = 2000;
-      const end = Date.now() + duration;
-
-      (function loop() {
-        draw();
-        if (Date.now() < end) requestAnimationFrame(loop);
+      const duration = 2000, end = Date.now() + duration;
+      const confettiInstance = confetti.create(document.getElementById('confetti-canvas'), { resize: true });
+      (function frame() {
+        confettiInstance({ particleCount: 7, angle: 60, spread: 55, origin: { x: 0 } });
+        confettiInstance({ particleCount: 7, angle: 120, spread: 55, origin: { x: 1 } });
+        if (Date.now() < end) requestAnimationFrame(frame);
       })();
     }
 
-    window.onload = drawWheel;
+    function spinWheel() {
+      if (spinning) return;
+      const name = document.getElementById("nameInput").value.trim();
+      if (!name) return alert("請輸入姓名！");
+      if (availableIcons.length === 0) return alert("圖示已用完！");
+      const remaining = stations.filter(s => !drawnIds.includes(s.id));
+      if (remaining.length === 0) return alert("所有站位已抽完！");
+      spinning = true;
+      const selected = remaining[Math.floor(Math.random() * remaining.length)];
+      const index = stations.findIndex(s => s.id === selected.id);
+      const anglePerItem = 360 / stations.length;
+      const stopAngle = 360 * 5 - (index * anglePerItem + anglePerItem / 2);
+      rotation += stopAngle; canvas.style.transform = `rotate(${rotation}deg)`;
+
+      setTimeout(() => {
+        const icon = availableIcons.shift();
+        drawnIds.push(selected.id); drawnIcons[selected.id] = icon;
+        history.innerHTML += `<div>${name}：${selected.id}. ${selected.name}</div>`;
+        const pair = pairedStations[selected.id]; highlightIds = [selected.id];
+        if (pair && !drawnIds.includes(pair)) {
+          drawnIds.push(pair); drawnIcons[pair] = icon; highlightIds.push(pair);
+          const p = stations.find(s => s.id === pair);
+          history.innerHTML += `<div>${name}：${p.id}. ${p.name}</div>`;
+        }
+        result.innerHTML = `<strong>${name}</strong> 抽中了 <strong>${selected.id}. ${selected.name}</strong>`;
+        const text = `${name}，抽中了 ${selected.id} 號，${selected.name}`;
+        const msg = new SpeechSynthesisUtterance(text);
+        msg.lang = 'zh-TW';
+        setTimeout(() => speechSynthesis.speak(msg), 100);
+        drawWheel(); startConfetti();
+        setTimeout(() => { highlightIds = []; drawWheel(); }, 2000);
+        spinning = false;
+      }, 5200);
+    }
+
+    document.getElementById("spinButton").onclick = spinWheel;
+    document.getElementById("resetButton").onclick = () => {
+      if (confirm("確定要重置抽籤？")) {
+        drawnIds = []; drawnIcons = {}; highlightIds = [];
+        availableIcons = [...icons]; rotation = 0;
+        canvas.style.transform = "rotate(0deg)";
+        result.innerHTML = ""; history.innerHTML = ""; drawWheel();
+      }
+    };
+
+    drawWheel();
   </script>
+<canvas id="confetti-canvas"></canvas>
 </body>
 </html>
